k3s/clusters/dev/apps/rss/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss
  namespace: rss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rss
  template:
    metadata:
      labels:
        app: rss
    spec:
      containers:
        - name: rss
          image: veetik/rss@sha256:d83ea20b62ac0a29d75ea89a515d1e4663973f078c4c5ca5f737ea394762a9bf
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: db-ca
              mountPath: /etc/rss
              readOnly: true
      volumes:
        - name: db-ca
          secret:
            secretName: rss-ca
            items:
              - key: ca.crt
                path: ca.crt
---
apiVersion: v1
kind: Service
metadata:
  name: rss
  namespace: rss
spec:
  selector:
    app: rss
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rss
  namespace: rss
spec:
  gatewayClassName: traefik-internal
  listeners:
    - name: web
      hostname: rss.internal.veetik.com
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      hostname: rss.internal.veetik.com
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-rss
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rss
  namespace: rss
spec:
  parentRefs:
    - name: rss
      sectionName: websecure
  hostnames:
    - rss.internal.veetik.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rss
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rss-redirect
  namespace: rss
spec:
  parentRefs:
    - name: rss
      sectionName: web
  hostnames:
    - rss.internal.veetik.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
